package com.mxdl.desigin.pattern.behavior.mediator.contract;

/**
 * Description: <IColleague><br>
 * Author:      mxdl<br>
 * Date:        2019/12/20<br>
 * Version:     V1.0.0<br>
 * Update:     <br>
 */
public interface IColleague {
    void sendMessage(String message);
    void notifyMessage(String messaege);
}
